# APSS-Prog-Adapter

./: PPCB_Programming_Adaptor.PrjPcb  Prog_Adaptor.PcbDoc  Prog_Adaptor.SchDoc  Prog_Adaptor_V1.PcbDoc
Breadboard Adapters/TSSOP-16,VSSOP-16,MSOP-16,SOIC-8/: TSSOP-16,VSSOP-16,MSOP-16,SOIC-8.PrjPcb
Breadboard Adapters/TSSOP-32,VSSOP-32,MSOP-32/: PCB.PcbDoc  PCB.html  PCB.txt  Schematic.SchDoc  Status Report.Txt  TSSOP-32,VSSOP-32,MSOP-32.PrjPcb
PSat/Beacon/: Beacon.PcbDoc  Beacon.SchDoc  Output_Job_File.OutJob  PSat Beacon.PrjPcb  Status Report.Txt
PSat/MCU/: MCU.SchDoc  PSat MCU.PrjPcb  Status Report.Txt
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/: Cargo.toml  README.md
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/src/: error.rs  lib.rs
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/src/lora/: types.rs
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/src/rfm95/: connection.rs  driver.rs
PSat/PSU/: Battery charger.SchDoc  Main.SchDoc  Output_Job_File.OutJob  PSU.PcbDoc  PSat PSU.PrjPcb  PSat PSU.PrjPcbStructure  Status Report.Txt  Step-down converter.SchDoc  Step-up converter.SchDoc
PSat/Payload Template/: Output_Job_File.OutJob  Payload.PcbDoc  Payload.SchDoc  Psat Payload.PrjPcb
PSat/Programming Adapter/: PPCB_Programming_Adaptor.PrjPcb  Prog_Adaptor.PcbDoc  Prog_Adaptor.SchDoc
Shared Libraries/: APSS BOM Template.xlsx  APSS Connectors.SchLib  APSS Generic Components.PcbLib  APSS Generic Components.SchLib  APSS Prototype Parts.SchLib  APSS-A3.SchDot  Design_Rules_-_PCBWay_Cheap_Boards.RUL
Shared Libraries/APSSTemplates/: APSS-A3.SchDot  (+2 more)
(+127 files in other folders)
